<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/card_background"
    android:padding="24dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="381dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_wifi_off"
        app:tint="@color/taxi_yellow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_network_title"
        android:textSize="22sp"
        android:textColor="@color/text_primary"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_network_desc"
        android:textSize="14sp"
        android:textColor="@color/text_secondary"
        android:gravity="center"
        android:layout_marginBottom="32dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="4dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_button_yellow">

        <Button
            android:id="@+id/btn_retry_connection"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btn_retry"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#454754"
            android:background="@android:color/transparent"
            android:stateListAnimator="@null"
            android:elevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>